# crypto-copilot-api

./: .env.bak.1754835085  .env.bak.1754837070  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RUNBOOK.md  SECURITY.md  TASKS.md  alembic.ini  docker-compose.yml  pyproject.toml  todo.md
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/routes/: analysis.py  candles.py  dex_meteora.py  dex_uniswapv3.py  exec_sim.py  health.py  instruments.py  llm_decider.py  marketdata.py  portfolio.py
app/core/: config.py  errors.py  logging.py  security.py
app/db/: base.py  models.py  session.py
app/db/repositories/: instruments.py  ohlcv.py  orderbook.py  tickers.py  trades.py
app/schemas/: analysis.py  dex.py  llm_contract.py
app/services/analysis/: __init__.py  agent.py
app/services/dex/: __init__.py  base.py  meteora.py  types.py  uniswap_v3.py
app/services/exchanges/: bybit_exchange.py  exchange_base.py
app/services/exec_sim/: simulator.py
app/services/llm_decider/: client.py  decider.py  validators.py
app/services/market_data/: cache.py  ccxt_adapter.py  sentiment.py  snapshot.py  ws_bybit.py
app/services/portfolio/: portfolio_service.py
app/services/risk/: risk_service.py
app/workers/: scheduler.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_market_data.py
scripts/: prevent_env_and_secrets.sh  smoke_local.sh
tests/: conftest.py  test_analysis_api.py  test_health.py  test_llm_contract.py  test_market_data.py
