[project]
name = "crypto-copilot-api"
version = "0.1.0"
description = "Crypto Trading Copilot — API (FastAPI, SQLAlchemy async, Alembic, Postgres, CCXT, OpenAI)"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.29",
  "aiosqlite>=0.20.0",
  "greenlet>=3.0.3",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "ccxt>=4.3.0",
  "openai>=1.35.0",
  "python-dotenv>=1.0.1",
  "web3>=6.20.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "anyio>=4.4.0",
  "black>=24.4.2",
  "ruff>=0.4.8",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
  "types-python-dateutil>=2.9.0.20240316"
]

[tool.uv]
package = true

[tool.black]
line-length = 100
[target-version]
py311 = true
exclude = [
  "migrations/*",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "B", "UP", "ASYNC", "COM"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"
